# Piddy

./: .env.example  .gitignore  .vercelignore  AGENT_AUDIT_COMPLETION_SUMMARY.md  AGENT_AUDIT_REPORT.md  AGENT_SYSTEM_ENHANCED.md  API.md  APPROVAL_SYSTEM_QUICKSTART.md  ARCHITECTURE_COMPARISON.md  AUTONOMOUS_SYSTEM_SELF_FEEDING_STRATEGY.md  BACKGROUND_SERVICE.md  BEFORE_AFTER_SUMMARY.md  BUILD_STATUS.md  CAPABILITIES.md  COMPREHENSIVE_HARDCODED_FIXES_COMPLETE.md  CONTINUOUS_EXECUTION_LAYER_EXPLANATION.md  CONTRIBUTING.md  CRITICAL_STUB_ISSUES.md  DASHBOARD_COMPLETE.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_QUICK_REFERENCE.md  DEMO_QUICKSTART.md  DEMO_RESULTS_PHASES_39_50.md  DEPLOYMENT_WEEK_1_IMPLEMENTATION.md  DESKTOP_APP_GUIDE.md  DESKTOP_QUICK_BUILD.md  Dockerfile  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_PHASES_39_50.md  FULL_STACK_IMPLEMENTATION_COMPLETE.md  HARDCODED_TESTS_AUDIT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_IMPLEMENTATION_COMPLETE.md  INTEGRATION_ROADMAP_4_HOURS.md  INTEGRATION_TEST_REPORT.md  KB_QUICK_REFERENCE.md  KB_SELF_GROWING.md  KB_TIER1_INTEGRATION_GUIDE.md  KNOWLEDGE_BASE_IMPLEMENTATION_COMPLETE.md  (+110 more)
build_scripts/: build_desktop.sh  build_linux_appimage.sh  build_macos_dmg.sh  build_windows_installer.nsis
config/: __init__.py  settings.py
data/: approval_workflow_state.json  market_analysis_latest.json  mission_drafts.json
projects/my-project/: .gitignore  README.md  pyproject.toml
projects/my-project/src/my_project/: __init__.py  config.py  main.py
projects/my-project/tests/: conftest.py  test_main.py
(+926 files in other folders)
